--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+
+title: Mohammad Nooranidoost
+email: mnooranidoost@fsu.edu
+
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -15,7 +17,7 @@ markdown: kramdown
 
 # Other options
 permalink: blog/:year/:month/:title
-job.title: "Assistant Professor"
+job.title: "Postdoctoral Scholar"
 excerpt_separator: "<!--more-->"
 
 # SEO stuff
