--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
-github_username:  jekyll
-
-<a href="https://scholar.google.com/citations?userid=UcT4CXoAAAAJ&user=UcT4CXoAAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square gs-icon"></i></a>
+github_username:  mnooranidoost
 
 # Build settings
 markdown: kramdown
