--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,7 +2,7 @@
   href: "/cv/"
 
 - title: "Research"
-  href: "/research/"
+  href: "/miscellany/"
   subcategories:
     - subtitle: "Item 1"
       subhref: "/miscellany/item-1/"
