--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 
-title: M. Nooranidoost
+title: 
 email: mnooranidoost@fsu.edu
 
 description: > # this means to ignore newlines until "baseurl:"
