--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+scholar_username: citations?user=PWU2CdgAAAAJ&hl=en
 github_username:  mnooranidoost
 
 # Build settings
