--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,28 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-scholar_username: citations?user=PWU2CdgAAAAJ&hl=en
-github_username:  mnooranidoost
+<!-- scholar_username: citations?user=PWU2CdgAAAAJ&hl=en --> 
+<!-- github_username:  mnooranidoost --> 
+
+github_username: # your GitHub user name
+gitlab_username: # your GitLab user name
+twitter_username: # your Twitter handle
+linkedin_username: # your LinkedIn user name
+scholar_userid: # your Google Scholar ID
+orcid_id: # your ORCID ID
+medium_username: # your Medium username
+quora_username: # your Quora username
+publons_id: # your ID on Publons
+research_gate_profile: # your profile on ResearchGate
+blogger_url: # your blogger URL
+work_url: # work page URL
+keybase_username: # your keybase user name
+wikidata_id: # your wikidata id
+dblp_url: # your DBLP profile url
+stackoverflow_id: #your stackoverflow id
+
+
+
 
 # Build settings
 markdown: kramdown
