--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 <!-- scholar_username: citations?user=PWU2CdgAAAAJ&hl=en --> 
 <!-- github_username:  mnooranidoost --> 
 
-github_username: # your GitHub user name
+github_username: https://github.com/mnooranidoost
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username: # your LinkedIn user name
