--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 
 github_username: https://github.com/mnooranidoost
 gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
+twitter_username: https://scholar.google.com/citations?user=PWU2CdgAAAAJ&hl=en
 linkedin_username: # your LinkedIn user name
 scholar_userid: https://scholar.google.com/citations?user=PWU2CdgAAAAJ&hl=en
 orcid_id: # your ORCID ID
