--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,15 +4,15 @@
 - title: "Research"
   href: "/miscellany/"
   subcategories:
-    - subtitle: "Item 0"
+    - subtitle: "Bayesian Estimation of Biofilm Mechanics"
       subhref: "/miscellany/item-0/"
-    - subtitle: "Item 1"
+    - subtitle: "Generation of droplets in flow focusing microchannels with viscoelastic fluids"
       subhref: "/miscellany/item-1/"
-    - subtitle: "Item 2"
+    - subtitle: "Deposition of cell-loaded droplets in droplet-based bio-printing systems"
       subhref: "/miscellany/item-2/"
-    - subtitle: "Item 3"
+    - subtitle: "Microencapsulation of cells in flow-focusing microchannels"
       subhref: "/miscellany/item-3/"
-    - subtitle: "Item 4"
+    - subtitle: "Migration of encapsulated leukemia cells in constricted microcapillary"
       subhref: "/miscellany/item-4/"
 
 - title: "Teaching"
