--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,9 @@
 - title: "CV"
   href: "/cv/"
+  
+- title: "Teaching"
+  href: "/teaching/"
+  
 - title: "Research"
   href: "/miscellany/"
   subcategories:
